# HabrParser

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
habrparser/: admin.py  apps.py  models.py  tasks.py
habrparser/migrations/: 0001_initial.py
parser/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
